[project]
authors         = [{ name = "ZhengYu, Xu", email = "zen-xu@outlook.com" }]
dependencies    = []
description     = "Hatch integrates with Pixi"
name            = "hatch-pixi"
requires-python = ">= 3.8"
dynamic         = ["version"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.version]
path    = "hatch_pixi/__init__.py"
pattern = "__version__ = \"(?P<version>[^']+)\""

[tool.pixi.project]
channels  = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
hatch-pixi = { path = ".", editable = true }
hatchling  = ">=1.25"

[tool.pixi.tasks]

[tool.ruff]
fix            = true
line-length    = 99
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ERA", # flake8-eradicate/eradicate
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PGH", # pygrep
  "RUF", # ruff checks
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party   = ["hatch_pixi"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
docstring-code-format = true
